@@ -14,6 +14,7 @@ export(get_tree)
 export(heat_matrix)
 export(load_GT_vcf)
 export(load_cellSNP_vcf)
+export(load_vcf_h5)
 export(mtx_to_df)
 export(multiPRC)
 export(plot_config_diffs)
